@@ -5,6 +5,7 @@
    does make zeep more compatible with all the invalid wsdl documents out
    there. (#159)
  - Implement support for attributeGroup (#160)
+ - Fix handling of Mime messages with no parts (#168)
 
 
 0.14.0 (2016-08-03)
